--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+muon (5.1.50-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release based on KDE Frameworks 5
+  * muon-installer is no more remove binary package and all references
+
+ -- Harald Sitter <sitter@kde.org>  Thu, 08 Jan 2015 18:36:20 +0100
+
 muon (2.2.0-0ubuntu5) utopic; urgency=medium
 
   * Add new package muon-common to contain shared data files.
