--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.2.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Harald Sitter <sitter@kde.org>  Mon, 26 Jan 2015 13:55:47 +0100
+
 muon (4:5.1.95+git20150120-0ubuntu2) vivid; urgency=medium
 
   * Make libmuon replace and break libmuonprivate2, they clash on
