--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.2.0-1~) UNRELEASED; urgency=medium
+
+  * Prepare initial Debian release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 13 Feb 2015 12:03:56 +0100
+
 muon (4:5.2.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
