--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 muon (4:5.2.0-1~) UNRELEASED; urgency=medium
 
   * Prepare initial Debian release.
+  * Add myself as Uploader.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 13 Feb 2015 12:03:56 +0100
 
