--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ muon (4:5.2.0-1~) UNRELEASED; urgency=medium
 
   * Prepare initial Debian release.
   * Add myself as Uploader.
+  * Update build dependencies to build against experimental and to
+    follow cmake.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 13 Feb 2015 12:03:56 +0100
 
