--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-muon (4:5.2.0-1~) UNRELEASED; urgency=medium
+muon (4:5.2.0-1) experimental; urgency=medium
 
   * Prepare initial Debian release.
   * Add myself as Uploader.
@@ -6,7 +6,7 @@ muon (4:5.2.0-1~) UNRELEASED; urgency=medium
     follow cmake.
   * Update copyright information.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 13 Feb 2015 12:03:56 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 14 Feb 2015 10:13:40 +0100
 
 muon (4:5.2.0-0ubuntu1) vivid; urgency=medium
 
