--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.2.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 19 Feb 2015 14:29:19 -0800
+
 muon (4:5.2.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
