NOCI  Release to vivid.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-muon (4:5.2.1-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.2.1-0ubuntu1) vivid; urgency=medium
 
   * New upstream release 
   * Add missing .mo files
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 19 Feb 2015 14:29:19 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 23 Feb 2015 09:45:04 -0800
 
 muon (4:5.2.0-0ubuntu1) vivid; urgency=medium
 
