--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.2.2-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.2.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 19 Mar 2015 15:11:27 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 24 Mar 2015 07:36:31 -0700
 
 muon (4:5.2.1+git20150304-0ubuntu1) vivid; urgency=medium
 
