--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-muon (4:5.2.1-1~) UNRELEASED; urgency=medium
+muon (4:5.2.2-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.2.1).
+  * New upstream release (5.2.2).
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 21 Mar 2015 09:50:06 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 25 Mar 2015 09:48:55 +0100
 
 muon (4:5.2.0-1) experimental; urgency=medium
 
