--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
-muon (4:5.3.0-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.3.1-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * Plasma 5.3 beta
   * Add muon-notifier.mo
   * new upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 23 Apr 2015 17:06:12 +0200
+  [ Scarlett Clark ]
+  * Vivid backport
+  * wrap-and-sort 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 07:44:46 -0700
 
 muon (4:5.2.2-1-0ubuntu4.1) vivid; urgency=medium
 
