--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,10 @@ muon (4:5.3.1-0ubuntu1) UNRELEASED; urgency=medium
   * Vivid backport
   * wrap-and-sort 
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 07:44:46 -0700
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 04 Jun 2015 20:31:01 +0200
 
 muon (4:5.2.2-1-0ubuntu4.2) vivid; urgency=medium
 
