--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-muon (4:5.3.1-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.3.1-0ubuntu1) wily; urgency=medium
 
   [ Jonathan Riddell ]
   * Plasma 5.3 beta
@@ -12,7 +12,7 @@ muon (4:5.3.1-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 04 Jun 2015 20:31:01 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 05 Jun 2015 02:37:53 +0200
 
 muon (4:5.2.2-1-0ubuntu4.2) vivid; urgency=medium
 
