--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.3.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 29 Jun 2015 17:31:23 +0200
+
 muon (4:5.3.1-0ubuntu1) wily; urgency=medium
 
   [ Jonathan Riddell ]
