--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.3.2-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.3.2).
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 30 Jun 2015 12:20:00 +0200
+
 muon (4:5.3.1-1) unstable; urgency=medium
 
   * New upstream release (5.2.1).
