--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.3.2-1~) UNRELEASED; urgency=medium
+muon (4:5.3.2-1) unstable; urgency=medium
 
   * New upstream release (5.3.2).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 30 Jun 2015 12:20:00 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 30 Jun 2015 23:04:58 +0200
 
 muon (4:5.3.1-0ubuntu1) wily; urgency=medium
 
