--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 muon (4:5.3.2-1) unstable; urgency=medium
 
   * New upstream release (5.3.2).
+  * Update copyright information.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 30 Jun 2015 23:04:58 +0200
 
