--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.3.2-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.3.2-0ubuntu1) wily; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 29 Jun 2015 17:31:23 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 02 Jul 2015 12:32:50 +0000
 
 muon (4:5.3.1-0ubuntu1) wily; urgency=medium
 
