--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.3.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Vivid backport
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 02 Jul 2015 11:44:24 -0700
+
 muon (4:5.3.2-0ubuntu1) wily; urgency=medium
 
   * New upstream release
