--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.3.2-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 10 Jul 2015 10:29:57 +0200
+
 muon (4:5.3.2-1) unstable; urgency=medium
 
   * New upstream release (5.3.2).
