--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 muon (4:5.3.2-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Drop update-notifier-common dependency. (Closes: #792011) Thanks to
+    Achim Schaefer
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 10 Jul 2015 10:29:57 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 10 Jul 2015 10:29:33 +0200
 
 muon (4:5.3.2-1) unstable; urgency=medium
 
