--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.3.2-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.3.90-0ubuntu1) UNRELEASED; urgency=medium
 
-  * Vivid backport
+  * Change kdesudo dependency to pkexec
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 02 Jul 2015 11:44:24 -0700
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 17 Jul 2015 16:20:08 +0200
 
 muon (4:5.3.2-0ubuntu1) wily; urgency=medium
 
