--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+muon (4:5.3.2-3) unstable; urgency=medium
+
+  * Team upload.
+  * Drop muon-discover depends on the no longer existing app-install-data
+    (Closes: #792358)
+
+ -- Scott Kitterman <scott@kitterman.com>  Mon, 20 Jul 2015 02:15:50 -0400
+
 muon (4:5.3.2-2) unstable; urgency=medium
 
   * Drop update-notifier-common dependency. (Closes: #792011) Thanks to
