--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.4.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * new upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 26 Aug 2015 11:53:22 +0100
+
 muon (4:5.3.95-0ubuntu1) wily; urgency=medium
 
   * Change kdesudo dependency to pkexec
