--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.4.0-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.4.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 26 Aug 2015 11:53:22 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 31 Aug 2015 15:53:50 +0100
 
 muon (4:5.3.95-0ubuntu1) wily; urgency=medium
 
