--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.4.0-1~) UNRELEASED; urgency=medium
+muon (4:5.4.0-1) unstable; urgency=medium
 
   * New upstream release (5.4.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 02 Sep 2015 23:33:38 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Sep 2015 18:24:40 +0200
 
 muon (4:5.4.0-0ubuntu1) wily; urgency=medium
 
