--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.4.1-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.4.1-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 03 Sep 2015 13:48:53 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 08 Sep 2015 10:21:43 +0100
 
 muon (4:5.4.0-0ubuntu1) wily; urgency=medium
 
