--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-muon (4:5.4.1-1~) UNRELEASED; urgency=medium
+muon (4:5.4.1-1) unstable; urgency=medium
 
   * New upstream release (5.4.1).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Sep 2015 21:39:05 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 11 Sep 2015 18:44:50 +0200
 
 muon (4:5.4.0-1) unstable; urgency=medium
 
