* Patch out Canonical support information used for Ubuntu - We're Debian (Closes: #791875)   - Added debian/patches/no-canonical-support

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+muon (4:5.4.1-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Patch out Canonical support information used for Ubuntu - We're Debian
+    (Closes: #791875)
+    - Added debian/patches/no-canonical-support
+
+ -- Scott Kitterman <scott@kitterman.com>  Mon, 14 Sep 2015 23:59:24 -0400
+
 muon (4:5.4.1-1) unstable; urgency=medium
 
   * New upstream release (5.4.1).
