New upstream release (5.4.2).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
-muon (4:5.4.1-2) UNRELEASED; urgency=medium
+muon (4:5.4.2-1~) UNRELEASED; urgency=medium
 
+  [ Scott Kitterman ]
   * Team upload.
   * Patch out Canonical support information used for Ubuntu - We're Debian
     (Closes: #791875)
     - Added debian/patches/no-canonical-support
 
- -- Scott Kitterman <scott@kitterman.com>  Mon, 14 Sep 2015 23:59:24 -0400
+  [ Maximiliano Curia ]
+  * New upstream release (5.4.2).
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 01 Oct 2015 17:09:07 +0200
 
 muon (4:5.4.1-1) unstable; urgency=medium
 
