--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ muon (4:5.4.2-1~) UNRELEASED; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (5.4.2).
+  * Update install files.
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 01 Oct 2015 17:09:07 +0200
 
