--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.4.2-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Vivid backport
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 05 Oct 2015 11:50:41 -0700
+
 muon (4:5.4.2-0ubuntu1) wily; urgency=medium
 
   * New upstream release
