--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+muon (4:5.4.3-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.4.3).
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 05 Nov 2015 16:54:40 +0100
+
 muon (4:5.4.2-1) unstable; urgency=medium
 
   [ Scott Kitterman ]
