--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-muon (4:5.4.2-0ubuntu1) UNRELEASED; urgency=medium
+muon (4:5.4.3-0ubuntu1) UNRELEASED; urgency=medium
 
   * Vivid backport
+  * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 05 Oct 2015 11:50:41 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Nov 2015 16:37:27 -0800
 
 muon (4:5.4.2-0ubuntu1) wily; urgency=medium
 
