--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 muon (4:5.4.3-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * Vivid backport
   * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Nov 2015 16:37:27 -0800
+  [ Philip Muškovac ]
+  * New upstream bugfix release (LP: #1518598)
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Sun, 22 Nov 2015 14:13:24 +0100
 
 muon (4:5.4.2-0ubuntu1) wily; urgency=medium
 
